core: Create a mutable list when creating params for copy disk
When creating the parameters for copy of a VM/Floating disk through
the REST we should create the list of image as a mutable list otherwise
if we encounter a compensation for the parameters the disk list will
not be able to be serialized by Jackson as List.of create an instance of
ImmutableCollections.List12 which does not have a default constructor

Change-Id: I3c441ad19b56a3a3356f9f735d9bc083eb045c39
Bug-Url: https://bugzilla.redhat.com/1844822
Signed-off-by: Tal Nisan <tnisan@redhat.com>